<resources>
    <string name="app_name">悠悠校园商家版</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="network_error_tips">请检查您的网络连接</string>
    <string name="common_empty_msg">抱歉,暂未获取到数据!\n请点击屏幕重试~</string>
    <string name="common_error_msg">抱歉,系统出错了!\n请点击屏幕重试~</string>
    <string name="common_no_network_msg">暂未连接上网络!\n请连接后点击屏幕重试~</string>
    <string name="common_loading_message">正在加载中...</string>
    <string name="request_time_out">请求超时，请检查网络连接</string>
    <string name="warn">提示</string>

    <string name="cancel">取消</string>
    <string name="ensure">确认</string>

    <!-- Home-->
    <string name="order">订单</string>
    <string name="goods">商品</string>
    <string name="person">个人</string>
    <string name="scan_code_confirm">扫码确认</string>
    <string name="add_good">添加</string>
    <string name="back_home">进入主页</string>

    <!-- Goods-->
    <string name="add_good1">添加商品</string>
    <string name="goods_detail_bottom_info">商品详情</string>
    <string name="goods_detail_bottom_comment">商品评论</string>
    <string name="goods_name">商品名称</string>
    <string name="goods_price">商品价格</string>
    <string name="goods_detail_describe">详情描述（请在这里输入不少于10个字）</string>
    <string name="look_goods_detail">查看商品详情</string>
    <string name="select_goods_photo">请选择商品照片</string>
    <string name="write_goods_detail">填写商品详情</string>
    <string name="goods_describe">信息描述</string>
    <string name="goods_classify">商品分类</string>
    <string name="no_goods_at_present">暂时还没有商品,快去</string>
    <string name="no_goods_ba">吧</string>
    <string name="add">添加</string>
    <string name="delete_good">删 除 商 品</string>
    <string name="click_add_image">点击添加商品图片</string>
    <string name="good_name">商品名称 :</string>
    <string name="good_org_price">商品原价 :</string>
    <string name="good_yoyo_price">悠悠价 :</string>
    <string name="good_discount">商品优惠 :</string>
    <string name="good_discount_hint">悠悠卡转向优惠 (选填)</string>
    <string name="good_catalog2">商品分类 :</string>
    <string name="good_key_word">关键字 :</string>
    <string name="good_detail">商品详情 :</string>
    <string name="good_catalog_hint">点击选择商品分类</string>
    <string name="key_word_hint">用户检索关键字</string>
    <string name="label_name_hint">商品描述标签，例 :消费流程</string>
    <string name="label_name">标签名 :</string>
    <string name="label_detail">标签详情描述 :</string>
    <string name="add_detail_module">添加详情模块</string>
    <string name="label_detail_hint">(请在这里输入不少于10个字)</string>
    <string name="delete">删除</string>
    <string name="good_edit">商品编辑</string>
    <string name="next_step1">下一步</string>
    <string name="add_good_describe">添加商品描述</string>
    <string name="choose_key_word">选择关键字</string>
    <string name="choose_good_group">选择商品分类</string>
    <string name="get_group_failed">获取商品分类失败，是否重新获取?</string>
    <string name="get_label_failed">获取关键字失败，是否重新获取?</string>
    <string name="in_delete">删除中</string>
    <string name="group_delete_success">删除成功~</string>
    <string name="modify_success">修改成功~</string>
    <string name="modify_group">修改分类</string>
    <string name="in_modify">修改中</string>
    <string name="create_group">添加分类</string>
    <string name="in_create">创建中</string>
    <string name="create_success">创建成功</string>
    <string name="success">成功~</string>
    <string name="group_delete_confirm">确实删除该条分类？</string>
    <string name="group_cant_be_null">分类不能为空</string>
    <string name="RMB">￥</string>
    <string name="no_good">没有商品</string>
    <string name="no_more">没有更多</string>
    <string name="in_pull_off">下架中</string>
    <string name="in_sale">上架中</string>
    <string name="pull_off_success">下架成功~</string>
    <string name="on_sale_success">上架成功~</string>
    <string name="in_create_good">添加商品中</string>
    <string name="in_update_good">修改商品中</string>
    <string name="good_update_success">商品修改成功</string>
    <string name="good_create_success">商品创建成功</string>
    <string name="plz_select_image">请选择商品图片</string>
    <string name="confirm_delete_good">确认删除商品吗？</string>
    <string name="good_delete_success">商品删除成功~</string>
    <string name="in_delete_good">删除商品中</string>

    <!-- good check valid-->
    <string name="plz_enter_good_name">请输入商品名称~</string>
    <string name="plz_enter_good_org_price">请输入商品原价~</string>
    <string name="plz_enter_good_price">请输入商品价格~</string>
    <string name="plz_choose_good_group">请选择商品分类~</string>
    <string name="plz_choose_good_label">请选择商品关键字~</string>
    <string name="plz_finish_label_info">请完善标签信息~</string>
    <string name="label_detail_cant_less_10">标签详情不得少于10个字~</string>
    
    <!-- order-->
    <string name="order_time">下单时间</string>
    <string name="pay_time">付款时间</string>
    <string name="done_time">消费时间</string>
    <string name="drawback_time">退款时间</string>
    <string name="order_detail">订单详情</string>
    <string name="order_number">订单编号</string>
    <string name="phone_number">手机号码</string>
    <string name="school_area">所在校区</string>
    <string name="number">数量</string>
    <string name="total_price">总价</string>
    <string name="need_pay">需支付</string>
    <string name="discount">优惠</string>
    <string name="note">备注</string>
    <string name="scan_ensure">扫描确认</string>
    <string name="no_such_order">没有相关订单</string>

    <!-- apply shop-->
    <string name="apply">申请</string>
    <string name="apply_hint_forward">老板您好，快去</string>
    <string name="apply_hint_back">店铺吧</string>
    <string name="shop_name">店铺名称</string>
    <string name="shop_host_name">店主姓名</string>
    <string name="connect_phone">联系电话</string>
    <string name="connect_address">联系地址</string>
    <string name="next_step">下 一 步</string>
    <string name="shop_classify">店铺类型</string>
    <string name="business_area">经营范围</string>
    <string name="shop_introduction">店铺简介</string>
    <string name="commit_apply">提 交 申 请</string>
    <string name="apply_shop">申请成为商家</string>
    <string name="apply_done">已提交申请</string>
    <string name="apply_done_hint">您已成功提交申请，悠悠团队会在一个工作日内和您联系</string>

    <!-- select photo stings used-->
    <string name="select_photo">选择图片</string>
    <string name="all_photos">所有图片</string>
    <string name="preview">预览</string>
    <string name="no_camera">设备没有相机~</string>
    <string name="plz_select_photo">请选择一张图片~</string>
    <string name="preview_photo">图片预览</string>
    <string name="finish">完成</string>
    <string name="catalog_list">分类列表</string>
    <string name="preferential_list">优惠列表</string>
    <string name="on_sale">出售中</string>
    <string name="already_pull_off">已下架</string>
    <string name="new_catalog">新建分类</string>
    <string name="edit_catalog">编辑分类</string>
    <string name="finish_edit">完成编辑</string>
    <string name="good_catalog">商品分类</string>
    <string name="confirm">确认</string>
    <string name="add_new_catalog">新建商品分类</string>
    <string name="new_cata_hint">输入文字</string>
    <string name="pull_off">下架</string>
    <string name="sale">上架</string>
    <string name="edit">编辑</string>

    <!-- scan code-->
    <string name="scan_text">将二维码放入框内，即可自动扫描</string>
    <string name="scan_code">二维码扫描</string>

    <!--<about>-->
    <string name="yoyo_campus">悠悠校园</string>
    <string name="about_line1">悠悠校园是由创梦工作室</string>
    <string name="about_line2">专为大学生而推出的一款生活服务一站式产品。</string>
    <string name="about_line3">悠悠校园完全贴近大学生生活，</string>
    <string name="about_line4">充分满足当代大学生</string>
    <string name="about_line5">闲置物品交易、旅游、学车、开设个人小店等需求。</string>
    <string name="about_line6">最全面的资讯</string>
    <string name="about_line7">最有力度的折扣</string>
    <string name="about_line8">最到位的服务</string>
    <string name="about_line9">尽在悠悠校园</string>
    <string name="company">南京虎腾信息科技有限公司</string>
    <string name="copy_right">Copyright@2014-2015</string>
</resources>
