<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/good_catalog"
            android:layout_marginLeft="22dp"
            style="@style/add_goods_dialog_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/new_iv"
            android:src="@drawable/add_goods_category_btn_add"
            android:layout_marginRight="28dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="20dp"
            android:layout_height="16dp" />
    </RelativeLayout>

    <com.dreamspace.uucampusseller.widget.WheelView
        android:id="@+id/dialog_wheelview"
        android:layout_marginTop="14dp"
        android:background="@color/goods_fragment_bg_color"
        android:layout_gravity="center_horizontal"
        android:layout_width="228dp"
        android:layout_height="100dp"
        app:itemNumber="3"
        app:unitHight="40dp"
        app:lineColor="@color/divider_color"
        app:lineHeight="0.5dp"
        app:normalTextColor="@color/text_normal"
        app:normalTextSize="14sp"
        app:selectedTextColor="@color/wheelview_center_color"
        app:selectedTextSize="18sp"/>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/cancel_ll"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/button_background_selectable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/cancel"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                style="@style/add_goods_dialog_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:background="@color/divider_color"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/confirm_ll"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/button_background_selectable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/confirm"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                style="@style/add_goods_dialog_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>